--- a/library.properties
+++ b/library.properties
@@ -6,4 +6,4 @@ sentence=A Modbus TCP Slave library for ESP8266-Arduino.
 paragraph=This modbus slave library uses callbacks to handle modbus requests.
 category=Communication
 url=https://github.com/yaacov/ArduinoModbusSlaveTCP
-architectures=esp8266
+architectures=esp8266,esp32
